// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`carousel Basic 3 Slide <bolt-carousel> Renders 1`] = `
<bolt-carousel
  class="is-ready"
  style=""
>
  <!---->
  
      
      
  <div
    class="c-bolt-carousel c-bolt-carousel--no-overflow c-bolt-carousel--initialized c-bolt-carousel--horizontal"
    style="cursor:grab;"
  >
    
        
    <div
      class="c-bolt-carousel__wrapper"
      style="transform:translate3d(0px, 0px, 0px);"
    >
      
          
      <!---->
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible c-bolt-carousel__slide--active"
        style="width:800px;margin-right:30px;"
      >
        <bolt-image
          no-lazy=""
          ratio="1151/638"
          sizes="auto"
          src="/fixtures/landscape-16x9-mountains.jpg"
          srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
          style=""
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 1
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--next"
        style="width:800px;margin-right:30px;"
      >
        <bolt-image
          no-lazy=""
          ratio="1151/638"
          sizes="auto"
          src="/fixtures/landscape-16x9-mountains.jpg"
          srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
          style=""
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 2
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready"
        style="width:800px;margin-right:30px;"
      >
        <bolt-image
          no-lazy=""
          ratio="1151/638"
          sizes="auto"
          src="/fixtures/landscape-16x9-mountains.jpg"
          srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
          style=""
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 3
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <!---->
      
        
    </div>
    
        
              
    <div
      class="c-bolt-carousel__pagination c-bolt-carousel__pagination--clickable c-bolt-carousel__pagination--bullets"
      style=""
    >
      <span
        aria-label="Go to slide 1"
        class="c-bolt-carousel__pagination__bullet c-bolt-carousel__pagination__bullet--active"
        role="button"
        style=""
        tabindex="0"
      />
      <span
        aria-label="Go to slide 2"
        class="c-bolt-carousel__pagination__bullet"
        role="button"
        style=""
        tabindex="0"
      />
      <span
        aria-label="Go to slide 3"
        class="c-bolt-carousel__pagination__bullet"
        role="button"
        style=""
        tabindex="0"
      />
    </div>
    
            
      
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="c-bolt-carousel__notification"
      style=""
    />
  </div>
  

      
            
  <div
    aria-disabled="true"
    aria-label="Previous slide"
    class="c-bolt-carousel__button c-bolt-carousel__button--previous c-bolt-carousel__button--inside c-bolt-carousel__button--disabled"
    role="button"
    style=""
    tabindex="0"
  >
    
              
      
    <bolt-button
      border-radius="full"
      color="secondary"
      icon-only=""
      size="medium"
      style=""
    >
      
        Previous
        
      <bolt-icon
        name="chevron-left"
        size="large"
        slot="before"
        style=""
      />
      
      
    </bolt-button>
    
    
            
  </div>
  
            
  <div
    aria-disabled="false"
    aria-label="Next slide"
    class="c-bolt-carousel__button c-bolt-carousel__button--next c-bolt-carousel__button--inside"
    role="button"
    style=""
    tabindex="0"
  >
    
              
      
    <bolt-button
      border-radius="full"
      color="secondary"
      icon-only=""
      size="medium"
      style=""
    >
      
        Next
        
      <bolt-icon
        name="chevron-right"
        size="large"
        slot="before"
        style=""
      />
      
      
    </bolt-button>
    
    
            
  </div>
  
          
    
  <!---->
</bolt-carousel>
`;

exports[`carousel Basic 3 Slide <bolt-carousel> Renders w/ 1 Slide Per View 1`] = `
<bolt-carousel
  class="is-ready"
  slides-per-view="1"
  style=""
>
  <!---->
  
      
      
  <div
    class="c-bolt-carousel c-bolt-carousel--no-overflow c-bolt-carousel--initialized c-bolt-carousel--horizontal"
    style="cursor:grab;"
  >
    
        
    <div
      class="c-bolt-carousel__wrapper"
      style="transform:translate3d(0px, 0px, 0px);"
    >
      
          
      <!---->
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible c-bolt-carousel__slide--active"
        style="width:800px;margin-right:30px;"
      >
        <bolt-image
          no-lazy=""
          ratio="1200/675"
          sizes="auto"
          src="/fixtures/landscape-16x9-skyline.jpg"
          srcset="/fixtures/landscape-16x9-skyline-50.jpg 50w, /fixtures/landscape-16x9-skyline-100.jpg 100w, /fixtures/landscape-16x9-skyline-200.jpg 200w, /fixtures/landscape-16x9-skyline-320.jpg 320w, /fixtures/landscape-16x9-skyline-480.jpg 480w, /fixtures/landscape-16x9-skyline-640.jpg 640w, /fixtures/landscape-16x9-skyline-800.jpg 800w, /fixtures/landscape-16x9-skyline-1024.jpg 1024w"
          style=""
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 1
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--next"
        style="width:800px;margin-right:30px;"
      >
        <bolt-image
          no-lazy=""
          ratio="1200/675"
          sizes="auto"
          src="/fixtures/landscape-16x9-skyline.jpg"
          srcset="/fixtures/landscape-16x9-skyline-50.jpg 50w, /fixtures/landscape-16x9-skyline-100.jpg 100w, /fixtures/landscape-16x9-skyline-200.jpg 200w, /fixtures/landscape-16x9-skyline-320.jpg 320w, /fixtures/landscape-16x9-skyline-480.jpg 480w, /fixtures/landscape-16x9-skyline-640.jpg 640w, /fixtures/landscape-16x9-skyline-800.jpg 800w, /fixtures/landscape-16x9-skyline-1024.jpg 1024w"
          style=""
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 2
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready"
        style="width:800px;margin-right:30px;"
      >
        <bolt-image
          no-lazy=""
          ratio="1200/675"
          sizes="auto"
          src="/fixtures/landscape-16x9-skyline.jpg"
          srcset="/fixtures/landscape-16x9-skyline-50.jpg 50w, /fixtures/landscape-16x9-skyline-100.jpg 100w, /fixtures/landscape-16x9-skyline-200.jpg 200w, /fixtures/landscape-16x9-skyline-320.jpg 320w, /fixtures/landscape-16x9-skyline-480.jpg 480w, /fixtures/landscape-16x9-skyline-640.jpg 640w, /fixtures/landscape-16x9-skyline-800.jpg 800w, /fixtures/landscape-16x9-skyline-1024.jpg 1024w"
          style=""
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 3
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <!---->
      
        
    </div>
    
        
              
    <div
      class="c-bolt-carousel__pagination c-bolt-carousel__pagination--clickable c-bolt-carousel__pagination--bullets"
      style=""
    >
      <span
        aria-label="Go to slide 1"
        class="c-bolt-carousel__pagination__bullet c-bolt-carousel__pagination__bullet--active"
        role="button"
        style=""
        tabindex="0"
      />
      <span
        aria-label="Go to slide 2"
        class="c-bolt-carousel__pagination__bullet"
        role="button"
        style=""
        tabindex="0"
      />
      <span
        aria-label="Go to slide 3"
        class="c-bolt-carousel__pagination__bullet"
        role="button"
        style=""
        tabindex="0"
      />
    </div>
    
            
      
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="c-bolt-carousel__notification"
      style=""
    />
  </div>
  

      
            
  <div
    aria-disabled="true"
    aria-label="Previous slide"
    class="c-bolt-carousel__button c-bolt-carousel__button--previous c-bolt-carousel__button--inside c-bolt-carousel__button--disabled"
    role="button"
    style=""
    tabindex="0"
  >
    
              
      
    <bolt-button
      border-radius="full"
      color="secondary"
      icon-only=""
      size="medium"
      style=""
    >
      
        Previous
        
      <bolt-icon
        name="chevron-left"
        size="large"
        slot="before"
        style=""
      />
      
      
    </bolt-button>
    
    
            
  </div>
  
            
  <div
    aria-disabled="false"
    aria-label="Next slide"
    class="c-bolt-carousel__button c-bolt-carousel__button--next c-bolt-carousel__button--inside"
    role="button"
    style=""
    tabindex="0"
  >
    
              
      
    <bolt-button
      border-radius="full"
      color="secondary"
      icon-only=""
      size="medium"
      style=""
    >
      
        Next
        
      <bolt-icon
        name="chevron-right"
        size="large"
        slot="before"
        style=""
      />
      
      
    </bolt-button>
    
    
            
  </div>
  
          
    
  <!---->
</bolt-carousel>
`;

exports[`carousel Basic 3 Slide <bolt-carousel> Renders w/ Nav Controls 1`] = `
<bolt-carousel
  class="is-ready"
  style=""
>
  <!---->
  
      
      
  <div
    class="c-bolt-carousel c-bolt-carousel--no-overflow c-bolt-carousel--initialized c-bolt-carousel--horizontal"
    style="cursor:grab;"
  >
    
        
    <div
      class="c-bolt-carousel__wrapper"
      style="transform:translate3d(0px, 0px, 0px);"
    >
      
          
      <!---->
      <!---->
      
        
      <!---->
      
        
      <!---->
      
      
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible c-bolt-carousel__slide--active"
        style="width:800px;margin-right:30px;"
      >
        <bolt-image
          no-lazy=""
          ratio="1200/675"
          sizes="auto"
          src="/fixtures/landscape-16x9-skyline.jpg"
          srcset="/fixtures/landscape-16x9-skyline-50.jpg 50w, /fixtures/landscape-16x9-skyline-100.jpg 100w, /fixtures/landscape-16x9-skyline-200.jpg 200w, /fixtures/landscape-16x9-skyline-320.jpg 320w, /fixtures/landscape-16x9-skyline-480.jpg 480w, /fixtures/landscape-16x9-skyline-640.jpg 640w, /fixtures/landscape-16x9-skyline-800.jpg 800w, /fixtures/landscape-16x9-skyline-1024.jpg 1024w"
          style=""
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 1
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--next"
        style="width:800px;margin-right:30px;"
      >
        <bolt-image
          no-lazy=""
          ratio="1200/675"
          sizes="auto"
          src="/fixtures/landscape-16x9-skyline.jpg"
          srcset="/fixtures/landscape-16x9-skyline-50.jpg 50w, /fixtures/landscape-16x9-skyline-100.jpg 100w, /fixtures/landscape-16x9-skyline-200.jpg 200w, /fixtures/landscape-16x9-skyline-320.jpg 320w, /fixtures/landscape-16x9-skyline-480.jpg 480w, /fixtures/landscape-16x9-skyline-640.jpg 640w, /fixtures/landscape-16x9-skyline-800.jpg 800w, /fixtures/landscape-16x9-skyline-1024.jpg 1024w"
          style=""
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 2
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready"
        style="width:800px;margin-right:30px;"
      >
        <bolt-image
          no-lazy=""
          ratio="1200/675"
          sizes="auto"
          src="/fixtures/landscape-16x9-skyline.jpg"
          srcset="/fixtures/landscape-16x9-skyline-50.jpg 50w, /fixtures/landscape-16x9-skyline-100.jpg 100w, /fixtures/landscape-16x9-skyline-200.jpg 200w, /fixtures/landscape-16x9-skyline-320.jpg 320w, /fixtures/landscape-16x9-skyline-480.jpg 480w, /fixtures/landscape-16x9-skyline-640.jpg 640w, /fixtures/landscape-16x9-skyline-800.jpg 800w, /fixtures/landscape-16x9-skyline-1024.jpg 1024w"
          style=""
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 3
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <!---->
      
        
    </div>
    
        
              
    <div
      class="c-bolt-carousel__pagination c-bolt-carousel__pagination--clickable c-bolt-carousel__pagination--bullets"
      style=""
    >
      <span
        aria-label="Go to slide 1"
        class="c-bolt-carousel__pagination__bullet c-bolt-carousel__pagination__bullet--active"
        role="button"
        style=""
        tabindex="0"
      />
      <span
        aria-label="Go to slide 2"
        class="c-bolt-carousel__pagination__bullet"
        role="button"
        style=""
        tabindex="0"
      />
      <span
        aria-label="Go to slide 3"
        class="c-bolt-carousel__pagination__bullet"
        role="button"
        style=""
        tabindex="0"
      />
    </div>
    
            
      
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="c-bolt-carousel__notification"
      style=""
    />
  </div>
  

      
            
  <div
    aria-disabled="true"
    aria-label="Previous slide"
    class="c-bolt-carousel__button c-bolt-carousel__button--previous c-bolt-carousel__button--inside c-bolt-carousel__button--disabled"
    role="button"
    style=""
    tabindex="0"
  >
    
              
    <!---->
    <!---->
    <bolt-button
      color="secondary"
      icon-only=""
      slot="previous-btn"
      style=""
      tabindex="-1"
    >
      Previous 
      <bolt-icon
        name="chevron-left"
        slot="before"
        style=""
      />
    </bolt-button>
    <!---->
    <!---->
    
            
  </div>
  
            
  <div
    aria-disabled="false"
    aria-label="Next slide"
    class="c-bolt-carousel__button c-bolt-carousel__button--next c-bolt-carousel__button--inside"
    role="button"
    style=""
    tabindex="0"
  >
    
              
    <!---->
    <!---->
    <bolt-button
      color="secondary"
      icon-only=""
      slot="next-btn"
      style=""
      tabindex="-1"
    >
      Next 
      <bolt-icon
        name="chevron-right"
        slot="after"
        style=""
      />
    </bolt-button>
    <!---->
    <!---->
    
            
  </div>
  
          
    
  <!---->
</bolt-carousel>
`;

exports[`carousel Basic 3 Slide <bolt-carousel> Renders w/ Outer Nav Controls 1`] = `
<bolt-carousel
  class="is-ready"
  nav-position="outside"
  style=""
>
  <!---->
  
      
      
  <div
    class="c-bolt-carousel c-bolt-carousel--no-overflow c-bolt-carousel--initialized c-bolt-carousel--horizontal"
    style="cursor:grab;"
  >
    
        
    <div
      class="c-bolt-carousel__wrapper"
      style="transform:translate3d(0px, 0px, 0px);"
    >
      
          
      <!---->
      <!---->
      
        
      <!---->
      
        
      <!---->
      
      
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible c-bolt-carousel__slide--active"
        style="width:800px;margin-right:30px;"
      >
        <bolt-image
          no-lazy=""
          ratio="1151/638"
          sizes="auto"
          src="/fixtures/landscape-16x9-mountains.jpg"
          srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
          style=""
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 1
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--next"
        style="width:800px;margin-right:30px;"
      >
        <bolt-image
          no-lazy=""
          ratio="1151/638"
          sizes="auto"
          src="/fixtures/landscape-16x9-mountains.jpg"
          srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
          style=""
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 2
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready"
        style="width:800px;margin-right:30px;"
      >
        <bolt-image
          no-lazy=""
          ratio="1151/638"
          sizes="auto"
          src="/fixtures/landscape-16x9-mountains.jpg"
          srcset="/fixtures/landscape-16x9-mountains-50.jpg 50w, /fixtures/landscape-16x9-mountains-100.jpg 100w, /fixtures/landscape-16x9-mountains-200.jpg 200w, /fixtures/landscape-16x9-mountains-320.jpg 320w, /fixtures/landscape-16x9-mountains-480.jpg 480w, /fixtures/landscape-16x9-mountains-640.jpg 640w, /fixtures/landscape-16x9-mountains-800.jpg 800w, /fixtures/landscape-16x9-mountains-1024.jpg 1024w"
          style=""
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 3
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <!---->
      
        
    </div>
    
        
              
    <div
      class="c-bolt-carousel__pagination c-bolt-carousel__pagination--clickable c-bolt-carousel__pagination--bullets"
      style=""
    >
      <span
        aria-label="Go to slide 1"
        class="c-bolt-carousel__pagination__bullet c-bolt-carousel__pagination__bullet--active"
        role="button"
        style=""
        tabindex="0"
      />
      <span
        aria-label="Go to slide 2"
        class="c-bolt-carousel__pagination__bullet"
        role="button"
        style=""
        tabindex="0"
      />
      <span
        aria-label="Go to slide 3"
        class="c-bolt-carousel__pagination__bullet"
        role="button"
        style=""
        tabindex="0"
      />
    </div>
    
            
      
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="c-bolt-carousel__notification"
      style=""
    />
  </div>
  

      
            
  <div
    aria-disabled="true"
    aria-label="Previous slide"
    class="c-bolt-carousel__button c-bolt-carousel__button--previous c-bolt-carousel__button--inside c-bolt-carousel__button--disabled"
    role="button"
    style=""
    tabindex="0"
  >
    
              
    <!---->
    <!---->
    <bolt-button
      color="secondary"
      icon-only=""
      slot="previous-btn"
      style=""
      tabindex="-1"
    >
      Previous 
      <bolt-icon
        name="chevron-left"
        slot="before"
        style=""
      />
    </bolt-button>
    <!---->
    <!---->
    
            
  </div>
  
            
  <div
    aria-disabled="false"
    aria-label="Next slide"
    class="c-bolt-carousel__button c-bolt-carousel__button--next c-bolt-carousel__button--inside"
    role="button"
    style=""
    tabindex="0"
  >
    
              
    <!---->
    <!---->
    <bolt-button
      color="secondary"
      icon-only=""
      slot="next-btn"
      style=""
      tabindex="-1"
    >
      Next 
      <bolt-icon
        name="chevron-right"
        slot="after"
        style=""
      />
    </bolt-button>
    <!---->
    <!---->
    
            
  </div>
  
          
    
  <!---->
</bolt-carousel>
`;

exports[`carousel Basic 7 Slide <bolt-carousel> Renders 1`] = `
<bolt-carousel
  class="is-ready"
  style=""
>
  <!---->
  
      
      
  <div
    class="c-bolt-carousel c-bolt-carousel--no-overflow c-bolt-carousel--initialized c-bolt-carousel--horizontal"
    style="cursor:grab;"
  >
    
        
    <div
      class="c-bolt-carousel__wrapper"
      style="transform:translate3d(0px, 0px, 0px);"
    >
      
          
      <!---->
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--visible c-bolt-carousel__slide--active"
        style="width:800px;margin-right:30px;"
      >
        <bolt-image
          no-lazy=""
          ratio="1200/675"
          sizes="auto"
          src="/fixtures/landscape-16x9-skyline.jpg"
          srcset="/fixtures/landscape-16x9-skyline-50.jpg 50w, /fixtures/landscape-16x9-skyline-100.jpg 100w, /fixtures/landscape-16x9-skyline-200.jpg 200w, /fixtures/landscape-16x9-skyline-320.jpg 320w, /fixtures/landscape-16x9-skyline-480.jpg 480w, /fixtures/landscape-16x9-skyline-640.jpg 640w, /fixtures/landscape-16x9-skyline-800.jpg 800w, /fixtures/landscape-16x9-skyline-1024.jpg 1024w"
          style=""
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 1
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready c-bolt-carousel__slide--next"
        style="width:800px;margin-right:30px;"
      >
        <bolt-image
          no-lazy=""
          ratio="1200/675"
          sizes="auto"
          src="/fixtures/landscape-16x9-skyline.jpg"
          srcset="/fixtures/landscape-16x9-skyline-50.jpg 50w, /fixtures/landscape-16x9-skyline-100.jpg 100w, /fixtures/landscape-16x9-skyline-200.jpg 200w, /fixtures/landscape-16x9-skyline-320.jpg 320w, /fixtures/landscape-16x9-skyline-480.jpg 480w, /fixtures/landscape-16x9-skyline-640.jpg 640w, /fixtures/landscape-16x9-skyline-800.jpg 800w, /fixtures/landscape-16x9-skyline-1024.jpg 1024w"
          style=""
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 2
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready"
        style="width:800px;margin-right:30px;"
      >
        <bolt-image
          no-lazy=""
          ratio="1200/675"
          sizes="auto"
          src="/fixtures/landscape-16x9-skyline.jpg"
          srcset="/fixtures/landscape-16x9-skyline-50.jpg 50w, /fixtures/landscape-16x9-skyline-100.jpg 100w, /fixtures/landscape-16x9-skyline-200.jpg 200w, /fixtures/landscape-16x9-skyline-320.jpg 320w, /fixtures/landscape-16x9-skyline-480.jpg 480w, /fixtures/landscape-16x9-skyline-640.jpg 640w, /fixtures/landscape-16x9-skyline-800.jpg 800w, /fixtures/landscape-16x9-skyline-1024.jpg 1024w"
          style=""
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 3
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready"
        style="width:800px;margin-right:30px;"
      >
        <bolt-image
          no-lazy=""
          ratio="1200/675"
          sizes="auto"
          src="/fixtures/landscape-16x9-skyline.jpg"
          srcset="/fixtures/landscape-16x9-skyline-50.jpg 50w, /fixtures/landscape-16x9-skyline-100.jpg 100w, /fixtures/landscape-16x9-skyline-200.jpg 200w, /fixtures/landscape-16x9-skyline-320.jpg 320w, /fixtures/landscape-16x9-skyline-480.jpg 480w, /fixtures/landscape-16x9-skyline-640.jpg 640w, /fixtures/landscape-16x9-skyline-800.jpg 800w, /fixtures/landscape-16x9-skyline-1024.jpg 1024w"
          style=""
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 4
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready"
        style="width:800px;margin-right:30px;"
      >
        <bolt-image
          no-lazy=""
          ratio="1200/675"
          sizes="auto"
          src="/fixtures/landscape-16x9-skyline.jpg"
          srcset="/fixtures/landscape-16x9-skyline-50.jpg 50w, /fixtures/landscape-16x9-skyline-100.jpg 100w, /fixtures/landscape-16x9-skyline-200.jpg 200w, /fixtures/landscape-16x9-skyline-320.jpg 320w, /fixtures/landscape-16x9-skyline-480.jpg 480w, /fixtures/landscape-16x9-skyline-640.jpg 640w, /fixtures/landscape-16x9-skyline-800.jpg 800w, /fixtures/landscape-16x9-skyline-1024.jpg 1024w"
          style=""
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 5
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready"
        style="width:800px;margin-right:30px;"
      >
        <bolt-image
          no-lazy=""
          ratio="1200/675"
          sizes="auto"
          src="/fixtures/landscape-16x9-skyline.jpg"
          srcset="/fixtures/landscape-16x9-skyline-50.jpg 50w, /fixtures/landscape-16x9-skyline-100.jpg 100w, /fixtures/landscape-16x9-skyline-200.jpg 200w, /fixtures/landscape-16x9-skyline-320.jpg 320w, /fixtures/landscape-16x9-skyline-480.jpg 480w, /fixtures/landscape-16x9-skyline-640.jpg 640w, /fixtures/landscape-16x9-skyline-800.jpg 800w, /fixtures/landscape-16x9-skyline-1024.jpg 1024w"
          style=""
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 6
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <bolt-carousel-slide
        class="c-bolt-carousel__slide is-ready"
        style="width:800px;margin-right:30px;"
      >
        <bolt-image
          no-lazy=""
          ratio="1200/675"
          sizes="auto"
          src="/fixtures/landscape-16x9-skyline.jpg"
          srcset="/fixtures/landscape-16x9-skyline-50.jpg 50w, /fixtures/landscape-16x9-skyline-100.jpg 100w, /fixtures/landscape-16x9-skyline-200.jpg 200w, /fixtures/landscape-16x9-skyline-320.jpg 320w, /fixtures/landscape-16x9-skyline-480.jpg 480w, /fixtures/landscape-16x9-skyline-640.jpg 640w, /fixtures/landscape-16x9-skyline-800.jpg 800w, /fixtures/landscape-16x9-skyline-1024.jpg 1024w"
          style=""
        />
        <bolt-text
          headline=""
          style=""
        >
          Slide 7
        </bolt-text>
      </bolt-carousel-slide>
      <!---->
      <!---->
      
        
    </div>
    
        
              
    <div
      class="c-bolt-carousel__pagination c-bolt-carousel__pagination--clickable c-bolt-carousel__pagination--bullets"
      style=""
    >
      <span
        aria-label="Go to slide 1"
        class="c-bolt-carousel__pagination__bullet c-bolt-carousel__pagination__bullet--active"
        role="button"
        style=""
        tabindex="0"
      />
      <span
        aria-label="Go to slide 2"
        class="c-bolt-carousel__pagination__bullet"
        role="button"
        style=""
        tabindex="0"
      />
      <span
        aria-label="Go to slide 3"
        class="c-bolt-carousel__pagination__bullet"
        role="button"
        style=""
        tabindex="0"
      />
      <span
        aria-label="Go to slide 4"
        class="c-bolt-carousel__pagination__bullet"
        role="button"
        style=""
        tabindex="0"
      />
      <span
        aria-label="Go to slide 5"
        class="c-bolt-carousel__pagination__bullet"
        role="button"
        style=""
        tabindex="0"
      />
      <span
        aria-label="Go to slide 6"
        class="c-bolt-carousel__pagination__bullet"
        role="button"
        style=""
        tabindex="0"
      />
      <span
        aria-label="Go to slide 7"
        class="c-bolt-carousel__pagination__bullet"
        role="button"
        style=""
        tabindex="0"
      />
    </div>
    
            
      
    <span
      aria-atomic="true"
      aria-live="assertive"
      class="c-bolt-carousel__notification"
      style=""
    />
  </div>
  

      
            
  <div
    aria-disabled="true"
    aria-label="Previous slide"
    class="c-bolt-carousel__button c-bolt-carousel__button--previous c-bolt-carousel__button--inside c-bolt-carousel__button--disabled"
    role="button"
    style=""
    tabindex="0"
  >
    
              
      
    <bolt-button
      border-radius="full"
      color="secondary"
      icon-only=""
      size="medium"
      style=""
    >
      
        Previous
        
      <bolt-icon
        name="chevron-left"
        size="large"
        slot="before"
        style=""
      />
      
      
    </bolt-button>
    
    
            
  </div>
  
            
  <div
    aria-disabled="false"
    aria-label="Next slide"
    class="c-bolt-carousel__button c-bolt-carousel__button--next c-bolt-carousel__button--inside"
    role="button"
    style=""
    tabindex="0"
  >
    
              
      
    <bolt-button
      border-radius="full"
      color="secondary"
      icon-only=""
      size="medium"
      style=""
    >
      
        Next
        
      <bolt-icon
        name="chevron-right"
        size="large"
        slot="before"
        style=""
      />
      
      
    </bolt-button>
    
    
            
  </div>
  
          
    
  <!---->
</bolt-carousel>
`;
